fixing the overflow

--- a/portfolio/src/components/home/App.css
+++ b/portfolio/src/components/home/App.css
@@ -216,9 +216,7 @@ nav{
   }
   .button-c{
     width: 55% !important;
-    overflow: hidden;
     margin: 1rem !important;
-    padding-right: 6rem !important;
     text-wrap: nowrap !important;
     margin-left: 0;
     
